--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -16,10 +16,16 @@ body {
     justify-content: center;
     align-items: center;
     border: 3px dashed #F3F3F3;
+    margin: 1rem;
 }
 
 #carousel {
     width: 600px;
     height: 300px;
     border: 2px solid red;
+}
+
+img {
+    width: 600px;
+    height: 288px;
 }
