change for Carousel object

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -9,23 +9,22 @@ body {
     background: #222;
 }
 
-.globalDiv {
+#globalDiv {
     display: flex;
     flex-flow: row wrap;
     width: 100%;
     justify-content: center;
     align-items: center;
-    border: 3px dashed #F3F3F3;
     margin: 1rem;
 }
 
 #carousel {
     width: 600px;
     height: 300px;
-    border: 2px solid red;
 }
 
 img {
+    user-select: none;
     width: 600px;
     height: 288px;
 }
