--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -46,3 +46,73 @@ img {
     left: 31%;
     top: 19%;
 }
+
+@media screen and (max-width: 1310px){
+    #rightArrow {
+        right: 27%;
+    }
+
+    #leftArrow {
+        left: 28.5%;
+    }
+}
+
+@media screen and (max-width: 1100px){
+    #rightArrow {
+        right: 24%;
+    }
+
+    #leftArrow {
+        left: 25.5%;
+    }
+}
+
+@media screen and (max-width: 950px){
+    #rightArrow {
+        right: 21%;
+    }
+
+    #leftArrow {
+        left: 22.5%;
+    }
+}
+
+@media screen and (max-width: 850px){
+    #rightArrow {
+        right: 18%;
+    }
+
+    #leftArrow {
+        left: 18%;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    #rightArrow {
+        right: 13%;
+    }
+
+    #leftArrow {
+        left: 15%;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    #carousel {
+        width: 100%;
+    }
+
+    #rightArrow {
+        right: 10%;
+    }
+
+    #leftArrow {
+        left: 10%;
+    }
+}
+
+@media screen and (max-width: 612px) {
+    img {
+        width: 100%;
+    }
+}
