--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -18,9 +18,10 @@ body {
     margin: 1rem;
 }
 
-#carousel {
+.carousel {
     width: 600px;
     height: 300px;
+    position: relative;
 }
 
 img {
@@ -29,7 +30,7 @@ img {
     height: 288px;
 }
 
-#rightArrow, #leftArrow {
+.rightArrow, .leftArrow {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,76 +39,25 @@ img {
     width: 2%;
     height: 5%;
     color: white;
-    right: 30%;
-    top: 19%;
 }
 
-#leftArrow {
-    left: 31%;
-    top: 19%;
+.rightArrow {
+    right: 1rem;
+    top: 45%;
 }
 
-@media screen and (max-width: 1310px){
-    #rightArrow {
-        right: 27%;
-    }
-
-    #leftArrow {
-        left: 28.5%;
-    }
+.leftArrow {
+    left: 1rem;
+    top: 45%;
 }
 
-@media screen and (max-width: 1100px){
-    #rightArrow {
-        right: 24%;
-    }
 
-    #leftArrow {
-        left: 25.5%;
-    }
-}
 
-@media screen and (max-width: 950px){
-    #rightArrow {
-        right: 21%;
-    }
 
-    #leftArrow {
-        left: 22.5%;
-    }
-}
-
-@media screen and (max-width: 850px){
-    #rightArrow {
-        right: 18%;
-    }
-
-    #leftArrow {
-        left: 18%;
-    }
-}
-
-@media screen and (max-width: 750px) {
-    #rightArrow {
-        right: 13%;
-    }
-
-    #leftArrow {
-        left: 15%;
-    }
-}
 
 @media screen and (max-width: 650px) {
     #carousel {
         width: 100%;
-    }
-
-    #rightArrow {
-        right: 10%;
-    }
-
-    #leftArrow {
-        left: 10%;
     }
 }
 
